--- a/tgs.html
+++ b/tgs.html
@@ -3,9 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <title>Enter TOTP Code</title>
+  <script>
+    const params = new URLSearchParams(window.location.search);
+    const value = params.get('qwe');
+    console.log(value); // "rty"
+
+    document.getElementById("qwe").innerHTML = ">>>" + value + "<<<";
+  
+  </script>
 </head>
 <body>
   <form method="POST" action="submit.php">
+    <div id="qwe"></div>
     <label>
       Enter your code:
       <input type="text" name="totp" maxlength="6" pattern="\d{6}" required>
