--- a/tgs.html
+++ b/tgs.html
@@ -8,8 +8,9 @@
     const value = params.get('qwe');
     console.log(value); // "rty"
 
-    document.getElementById("qwe").innerHTML = ">>>" + value + "<<<";
-  
+    // document.getElementById("qwe").innerHTML = ">>>" + value + "<<<";
+    document.getElementById("qwe").innerHTML = "eeeee";
+    
   </script>
 </head>
 <body>
